examples/test/testpolicy10784.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10784
  namespace: namespace290
spec:
  podSelector:
    matchLabels:
      key5: value15
      key15: value13
      key9: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value37
          key21: value2
      podSelector:
        matchLabels:
          key44: value9
          key19: value7
